feat: auth + privateProcedure

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.25.1",
     "@tanstack/react-query": "^4.35.3",
     "@trpc/client": "^10.38.5",
     "@trpc/react-query": "^10.38.5",
