--- a/package.json
+++ b/package.json
@@ -10,17 +10,29 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@clerk/backend": "^0.30.1",
     "@clerk/nextjs": "^4.25.1",
+    "@clerk/types": "^3.53.0",
+    "@hookform/resolvers": "^3.3.1",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^4.35.3",
     "@trpc/client": "^10.38.5",
     "@trpc/react-query": "^10.38.5",
     "@trpc/server": "^10.38.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "fuse.js": "^6.6.2",
     "lucide-react": "^0.279.0",
     "next": "^13.5.3",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "superjson": "^1.13.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
