--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -7,7 +7,26 @@ on:
     branches-ignore:
       - main
 jobs:
-  Deploy-Preview:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: latest
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Run Vite tests
+        run: pnpm test
+  deploy-preview:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
